manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dojo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      foo: bar
  template:
    metadata:
      labels:
        foo: bar
    spec:
      affinity:
          podAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: redis
              topologyKey: kubernetes.io/hostname
#          podAntiAffinity:
#            preferredDuringSchedulingIgnoredDuringExecution:
#              - weight: 100
#                podAffinityTerm:
 #                 labelSelector:
  #                  matchLabels:
   #                   anchor: zone-a
    #              topologyKey: topology.kubernetes.io/zone
      containers:
        - name: appc
          image: sarraragguem/guestbook:v0.3.0
          command: ["./binary"]
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: 100m
            limits:
              memory: "256Mi"
              cpu: 500m          
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12  
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
