manifests/monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dojo-metrics
  namespace: dojonm
  labels:
    app: dojo
    release: kube-prom
spec:
  selector:
    foo: bar
  ports:
    - name: http
      port: 3000
      targetPort: http
