manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: dojo-service
spec:
  selector:
    foo: bar
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http
      name : http
