manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dojo-ingress
  labels:
    foo: bar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dojo-service
                port:
                  name: http
